<resources>
    <string name="app_name">AnyOrder</string>
    <string name="title_text">AnyOrder</string>
    <string name="title_description">Order Anything, Anywhere, Anytime.</string>
    <string name="button_bottom">Let\'s Get Started</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_text_subtitle">Explore your will and fulfill it.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>